Banco de dados configurado

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web app para gerenciar tarefas diárias",
   "main": "src/app.js",
   "scripts": {
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/Usuariotaynara123/TaskChest#readme",
   "devDependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5"
   }
 }
